# surrealengine-auth

./: .gitignore  LICENSE  README.md  pyproject.toml
src/surrealengine_auth/: __init__.py  email_service.py  logger.py  models.py  service.py
src/surrealengine_auth/templates/: confirmation.html  confirmation.txt  passwordless_login.html  passwordless_login.txt  two_factor.html  two_factor.txt
