[project]
name = "surrealengine_auth"
version = "0.1.0"
description = "Authentication and authorization module for applications using SurrealDB & SurrealEngine"
authors = [
    {name = "SurrealEngine Team", email = "st0pt4ck1ngus@gmail"}
]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "surrealengine>=0.1.0",
]

[project.urls]
"Homepage" = "https://github.com/iristech-systems/surrealengine-auth"
"Bug Tracker" = "https://github.com/iristech-systems/surrealengine-auth/issues"
